--- a/intern.html
+++ b/intern.html
@@ -328,18 +328,68 @@ transition: 0.5s;
   </nav>
 
 <div class="slide-in" id="pageWrapper">
-<!-- Repository Section -->
-<section id="repository" style="padding: 100px 40px; background-color: #f9f9f9;">
-  <h2 style="font-family:'Playfair Display',serif;font-size:48px;font-weight:700;text-transform:none;letter-spacing:-0.5px;margin-bottom:25px;background:#2E7D32;background-clip:text;-webkit-background-clip:text;-webkit-text-fill-color:transparent;">Research Repository</h2>
-  <div class="repo-toolbar">
-    <input type="text" id="repo-search" placeholder="Search by title, author, tags...">
-    <select id="repo-sort">
-      <option value="newest">Newest</option>
-      <option value="oldest">Oldest</option>
-      <option value="title">Title</option>
-    </select>
+<!-- EarthMag Internships Section -->
+<section id="earth-internships" style="padding: 100px 40px; background-color: #f9f9f9;">
+  <h2 style="font-family:'Playfair Display',serif;font-size:48px;font-weight:700;text-transform:none;letter-spacing:-0.5px;margin-bottom:25px;color:#2E7D32;border-bottom:2px solid #2E7D32;padding-bottom:8px;max-width:max-content;background:none;-webkit-text-fill-color:unset;">EarthMag Internships</h2>
+
+  <p style="font-size:20px;max-width:800px;margin-bottom:32px;color:#444;">
+    Join EarthMag as a remote intern and help us advance sustainability journalism, research, and outreach! Our internships are designed for passionate, self-driven students eager to gain real-world experience and make a tangible impact on environmental awareness.
+  </p>
+
+  <!-- Why Intern With EarthMag -->
+  <div style="margin-bottom:42px;">
+    <h3 style="font-family:'Playfair Display',serif;font-size:28px;color:#2E7D32;margin-bottom:10px;">Why Intern With EarthMag?</h3>
+    <ul style="font-size:18px;line-height:1.7;margin-left:22px;color:#444;">
+      <li>Work directly with the editorial and research team on live projects.</li>
+      <li>Publish your writing, analysis, or creative work to a wide audience.</li>
+      <li>Receive mentorship, feedback, and a certificate upon completion.</li>
+      <li>Flexible, remote work schedule to suit your academic calendar.</li>
+    </ul>
   </div>
-  <div id="papers" style="display: flex; flex-wrap: wrap; gap: 28px;"></div>
+
+  <!-- Timeline & Commitment -->
+  <div style="margin-bottom:42px;">
+    <h3 style="font-family:'Playfair Display',serif;font-size:28px;color:#2E7D32;margin-bottom:10px;">Timeline & Commitment</h3>
+    <ul style="font-size:18px;line-height:1.7;margin-left:22px;color:#444;">
+      <li><strong>Duration:</strong> 6–8 weeks (Summer & Winter batches)</li>
+      <li><strong>Location:</strong> Remote (India & international students welcome)</li>
+      <li><strong>Weekly Commitment:</strong> 4–6 hours (flexible scheduling)</li>
+    </ul>
+  </div>
+
+  <!-- What You'll Do -->
+  <div style="margin-bottom:42px;">
+    <h3 style="font-family:'Playfair Display',serif;font-size:28px;color:#2E7D32;margin-bottom:10px;">What You'll Do</h3>
+    <ul style="font-size:18px;line-height:1.7;margin-left:22px;color:#444;">
+      <li>Research and write articles, interviews, or explainers on sustainability topics.</li>
+      <li>Assist with data collection, fact-checking, and visual content creation.</li>
+      <li>Help organize outreach campaigns, webinars, or social media initiatives.</li>
+      <li>Collaborate with a diverse team of students and mentors.</li>
+    </ul>
+  </div>
+
+  <!-- Who Can Apply -->
+  <div style="margin-bottom:42px;">
+    <h3 style="font-family:'Playfair Display',serif;font-size:28px;color:#2E7D32;margin-bottom:10px;">Who Can Apply?</h3>
+    <ul style="font-size:18px;line-height:1.7;margin-left:22px;color:#444;">
+      <li>High school, undergraduate, or postgraduate students (any discipline, age 15+)</li>
+      <li>Strong interest in sustainability, writing, research, or science communication</li>
+      <li>Excellent written English; regional language skills are a plus</li>
+      <li>No prior experience required—just curiosity and motivation!</li>
+    </ul>
+  </div>
+
+  <!-- Apply Now -->
+  <div style="margin-bottom:42px;">
+    <h3 style="font-family:'Playfair Display',serif;font-size:28px;color:#2E7D32;margin-bottom:10px;">Apply Now</h3>
+    <p style="font-size:18px;color:#444;">Fill out the application form below. We'll review your application and contact shortlisted candidates for a quick interview.</p>
+    <div style="margin:32px 0;max-width:600px;">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv9I6nW9oGz1w0h1n1K4n6c3u5g6oI4Xn8uJ2y3w4W5g6Q0A/viewform?embedded=true"
+        width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0"
+        style="border-radius:16px;box-shadow:0 4px 18px rgba(46,125,50,0.10);background:#fff;">Loading…</iframe>
+    </div>
+    <p style="font-size:16px;color:#888;">Questions? Email us at <a href="mailto:inquire.earthmagazine@gmail.com" style="color:#2E7D32;text-decoration:none;">inquire.earthmagazine@gmail.com</a></p>
+  </div>
 </section>
 
 <!-- Modal for PDF preview -->
